--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,7 @@
 // =============================
 // Global Styles and Variables
 // =============================
-
+@use 'sass:map';
 // 1. RESET STYLES
 *,
 *::before,
@@ -15,12 +15,6 @@ html {
   scroll-behavior: smooth;
   font-size: 16px; // Set default base font size
 }
-body {
-    font-family: 'Roboto', Arial, sans-serif;
-    line-height: 1.5;
-    color: $text-color;
-    background-color: $background-color;
-}
 
 // 2. FONT SETUP (Custom Google Font or Local Font)
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
@@ -29,10 +23,28 @@ $roboto: 'Roboto', Arial, sans-serif;
 // 3. COLOR VARIABLES
 $primary-color: #3498db;    // Blue
 $secondary-color: #2ecc71;  // Green
+$secondary-color-hover: #000000;  
 $accent-color: #e74c3c;     // Red
 $background-color: #f8f9fa; // Light gray
 $text-color: #333333;       // Dark gray
-
+$dark-background-color: #333333; // Dark gray
+$dark-text-color: #f8f9fa;       // Light gray
+$primary-color-hover: #3c7bb6;
+$background-color: #f7f7f7;
+$form-background-color: #fff;
+$error-color: #e74c3c;
+$success-color: #2ecc71;
+$border-radius: 4px;
+$border-color: #ddd;
+$focus-border-color: $primary-color;
+$input-padding: 12px;
+$input-margin: 10px 0;
+body {
+  font-family: $roboto;
+  line-height: 1.5;
+  color: $text-color;
+  background-color: #ffffff;
+}
 // 4. MIXINS FOR BREAKPOINTS
 $breakpoints: (
   'mobile': 768px,
@@ -44,8 +56,8 @@ $breakpoints: (
 
 // Mixin for Mobile-First Approach (Max-width)
 @mixin until($size) {
-  @if map-has-key($breakpoints, $size) {
-    @media (max-width: map-get($breakpoints, $size)) {
+  @if map.has-key($breakpoints, $size) {
+    @media (max-width: map.get($breakpoints, $size)) {
       @content;
     }
   } @else {
@@ -55,8 +67,8 @@ $breakpoints: (
 
 // Mixin for Larger Screens (Min-width)
 @mixin from($size) {
-  @if map-has-key($breakpoints, $size) {
-    @media (min-width: (map-get($breakpoints, $size) + 1px)) {
+  @if map.has-key($breakpoints, $size) {
+    @media (min-width: (map.get($breakpoints, $size) + 1px)) {
       @content;
     }
   } @else {
@@ -88,4 +100,46 @@ img {
   max-width: 100%;
   height: auto;
   display: block;
+}
+@keyframes grow {
+  0% {
+    font-size:1rem;
+  }
+  50% {
+    font-size:1.25rem;
+  }
+  100% {
+    font-size:1rem;
+  }
+}
+
+button{
+  padding:0.75rem 1rem;
+  font-size:1rem;
+  background-color:white;
+  color:black;
+  &:hover{
+    background-color:black;
+    color:white;
+  }
+
+}
+h1{
+  margin: 2rem 0;
+}
+p{
+  margin-bottom: 1.5rem;
+  line-height: 1.5;
+  font-size:1.125rem;
+}
+.screen-reader-text {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
