--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -23,9 +23,6 @@
       width: 200px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       height: 100%;
-      @include g.until("mobile") {
-        width:100%;
-      }
       &__image{
         width: 100%;
        padding-top:100%;
@@ -106,6 +103,9 @@
       align-items:center;
       button{
         margin-left:0.5rem;
+        @include g.until("mobile") {
+          display:none;
+        }
       }
     }
   }
